--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "doclint": "npm run doc -- -t templates/silent",
     "test": "npm run lint -- --max-warnings=0 && npm run build && npm run test-examples && npm run test-unit",
     "test-unit": "cross-env BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-core/register test/*unit_test.js",
-    "test-examples": "npm run transpile && mocha test/globe_test.js && mocha test/planar_test.js && mocha test/postprocessing_test.js && mocha test/externalscene_test.js && mocha test/wmts_test.js",
+    "test-examples": "mocha -t 60000 --recursive test/examples",
     "build": "webpack -p",
     "transpile": "cross-env BABEL_DISABLE_CACHE=1 babel src --out-dir lib",
     "start": "cross-env NODE_ENV=development webpack-dev-server -d --inline --hot",
@@ -36,8 +36,10 @@
     "babel-runtime": "^6.20.0",
     "earcut": "^2.1.1",
     "flatbush": "^1.3.0",
+    "http-server": "^0.11.1",
     "js-priority-queue": "^0.1.5",
     "jszip": "^3.1.3",
+    "puppeteer": "^1.3.0",
     "text-encoding-utf-8": "^1.0.1",
     "togeojson": "^0.16.0",
     "url-polyfill": "^1.0.8",
